# trade-engine

./: .env.example  .gitignore  Cargo.toml  README.md
crates/alpaca-ingest/: Cargo.toml
crates/alpaca-ingest/src/: client.rs  config.rs  error.rs  lib.rs  models.rs
crates/market-core/: Cargo.toml
crates/market-core/src/: lib.rs
crates/trade-engine-cli/: Cargo.toml
crates/trade-engine-cli/src/: main.rs
docs/: 01-system-overview.md  02-feature-catalogue.md  03-initial-feature-selection.md  04-policy-labelling-and-training.md  05-implementation-roadmap.md  06-technical-architecture.md  07-rust-ingest-quickstart.md
docs/components/: 00-component-map.md  01-ingestion-worker.md  02-candle-store.md  03-rust-feature-engine.md  04-regime-classifier.md  05-policy-engine.md  06-backtest-engine.md  07-labelling-engine.md  08-ml-training-service.md  09-live-inference-and-risk.md  10-api-dashboard.md
