[package]
name = "trade-engine-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "trade-engine"
path = "src/main.rs"

[dependencies]
alpaca-ingest = { path = "../alpaca-ingest" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
market-core = { path = "../market-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
